web-infras/parser/tests/fixtures/babel/es2022/class-properties/arguments-in-arrow-function/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (3,17)
3|    foo = () => arguments;
 |               ^
